# burp-scanner

./: .env.example  .gitignore  README.md  pyproject.toml
samples/: synthetic-history.xml
scripts/: gpu-info.py  start-local-model.sh
src/burp_reader/: __main__.py  cli.py  domain.py  grouping.py  http_message.py  local_llm.py  pipeline.py  redaction.py  reporting.py  rules.py  xml_reader.py
tests/: test_core.py  test_pipeline.py
