[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "burp-reader"
version = "0.1.0"
description = "Local-first Burp Suite HTTP history analyzer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ardam" }]
dependencies = []

[project.optional-dependencies]
openvino = [
  "openvino==2025.4.0",
  "openvino-genai==2025.4.0.0",
]

[project.scripts]
burp-reader = "burp_reader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
